# tesserax

./: .coverage  .gitignore  .nojekyll  CHANGELOG.md  GEMINI.md  README.md  TASKS.md  about.html  animations.html  charts.html  core.html  gallery.html  index.html  layout.html  makefile  physics.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.gemini/hooks/: journal.py  make.py
.github/workflows/: release.yaml  tests.yaml
docs/: .gitignore  _quarto.yml  animations.qmd  charts.qmd  core.qmd  gallery.qmd  gallery.quarto_ipynb  index.qmd  layout.qmd  physics.qmd
docs/posts/: charting-blog-post.qmd
examples/: basic.py
journal/: 2026-03-03.md
plans/: animation-rendering-overhaul.md
posts/: charting-blog-post.html
research/: svg-to-gif-fidelity-report.md
research/svg-to-gif-fidelity/: question_1.md  question_2.md  question_3.md
src/tesserax/: __init__.py  animation.py  base.py  canvas.py  chart.py  color.py  core.py  layout.py  path.py  sketch.py  transform.py
src/tesserax/physics/: __init__.py  collisions.py  constraints.py  core.py  forces.py  world.py
tests/: test_animations.py  test_basics.py  test_canvas.py  test_charts.py  test_charts_advanced.py  test_color_palettes.py  test_colors.py  test_core.py  test_layouts.py  test_path.py  test_physics.py  test_physics_constraints.py  test_physics_forces.py  test_physics_world.py  test_sketch.py
